welcome.lessons.welcome.array.array123.Array123.scala.error
array123:16: error: type mismatch;
 found   : Unit
 required: Boolean
if(x==1 && a==1 && c==1){return true}
^